Move from Markdown to reStructuredText readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = pilotwire-controller
 version = 0.3.0
 summary = Electrical heaters driving controller
+description-file = README.rst
 home-page = https://github.com/cailloumajor/home-web
 author = Arnaud Rocher
 author_email = arnaud.roche3@gmail.com
