Reorganize requirements files to deal with Python and Debian packaging

--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -1,4 +1,6 @@
--r requirements.in
+# Development requirements.
+# Compiled file is to be passed to 'pip install -r' in a virtualenv.
+# Must be compiled with pip-compile.
+-r pbr-requirements.in
 
-ipython
 pip-tools
