--- a/setup.cfg
+++ b/setup.cfg
@@ -10,16 +10,11 @@ license = GPLv3+
 [files]
 packages = pilotwire_controller
 
-[extras]
-PiFaceDigital =
-    pifacedigitalio
-    pifacecommon
-
 [entry_points]
 console_scripts =
     pwcontrollerd = pilotwire_controller.daemon:main
 pilotwire.controller =
-    piface = pilotwire_controller.controller.piface:PiFaceController [PiFaceDigital]
+    piface = pilotwire_controller.controller.piface:PiFaceController
     test = pilotwire_controller.tests.utils:TestingController
 
 [pbr]
