--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@
 argparse==1.4.0           # via stevedore
 cached-property==1.3.0
 enum-compat==0.0.2        # via zeroconf
-netifaces==0.10.4         # via zeroconf
+netifaces==0.10.4
 pbr==1.8.1
 pifacecommon==4.1.2
 pifacedigitalio==3.0.5
