--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ console_scripts =
     pwcontrollerd = pilotwire_controller.daemon:main
 pilotwire.controller =
     piface = pilotwire_controller.controller.piface:PiFaceController
-    test = pilotwire_controller.tests.utils:TestingController
+    test = pilotwire_controller.controller.testing:TestingController
 
 [pbr]
 skip_authors = true
