--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,9 @@
+[tox]
+envlist = py34, py35
+
+[testenv]
+deps = -rdev-requirements.txt
+commands = py.test
+
 [pytest]
 usefixtures = patch_zeroconf_name
