Add coverage and pylint to tox testing command

--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -2,11 +2,9 @@
 # Compiled file is to be passed to 'pip install -r' in a virtualenv.
 # Must be compiled with pip-compile.
 -r requirements.txt
+-r tests/reqs.txt
 
 ipython
-pifacecommon
-pifacedigitalio
 pip-tools
 pylint
-pytest
 tox
