--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [tox]
-envlist = py34, py35
+envlist = py34
 
 [testenv]
-deps = -rdev-requirements.txt
-commands = py.test
+deps = -rtests/reqs.txt
+commands =
+    py.test --cov={envsitepackagesdir}/pilotwire_controller --pylint \
+            --cov-report term --cov-report html --pylint-error-types=RWEF
+recreate = true
 
 [pytest]
 usefixtures = patch_zeroconf_name
