Use flake8 in development and testing

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ envlist = py34
 [testenv]
 deps = -rtests/reqs.txt
 commands =
-    py.test --cov={envsitepackagesdir}/pilotwire_controller --pylint \
-            --cov-report term --cov-report html --pylint-error-types=RWEF
+    py.test --cov={envsitepackagesdir}/pilotwire_controller \
+            --cov-report term --cov-report html \
+            --pylint --pylint-error-types=RWEF --flake8
 recreate = true
 
 [pytest]
