--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,14 @@
 envlist = py34
 
 [testenv]
-deps = -rtests/reqs.txt
+deps =
+     pifacecommon
+     pifacedigitalio
+     pytest
+     pytest-cov
+     pytest-flake8
+     pytest-pylint
+
 commands =
     py.test --cov={envsitepackagesdir}/pilotwire_controller \
             --cov-report term --cov-report html \
