--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ python:
 install:
   - pip install -e .
   - pip install -r dev-requirements.txt
+  - pip install coveralls
 
 script: pytest
+
+after_success: coveralls
