--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,5 @@
 cached-property==1.3.0
 enum-compat==0.0.2        # via zeroconf
 netifaces==0.10.5
-pbr==2.0.0                # via stevedore
-six==1.10.0               # via stevedore, zeroconf
-stevedore==1.21.0
+six==1.10.0               # via zeroconf
 zeroconf==0.18.0
