--- a/Pipfile
+++ b/Pipfile
@@ -7,18 +7,18 @@ name = "pypi"
 
 [dev-packages]
 
-"PevFJ_Eq" = {path = ".", editable = true}
 "flake8" = "*"
 ipython = "*"
 pylama = "*"
-pylama-pylint = "*"
+pylama_pylint = "*"
 pytest = "*"
 pytest-cov = "*"
 
 
 [packages]
 
-flask-restful = "*"
+Flask = "*"
+marshmallow = "*"
 
 
 [requires]
