Get pifacedigitalio with pip instead of apt-get. Also specify picfacecommon dependency, pifacedigitalio doesn't satisfy it when installing with pip.

--- a/Pipfile
+++ b/Pipfile
@@ -10,15 +10,17 @@ name = "pypi"
 "flake8" = "*"
 ipython = "*"
 pylama = "*"
-pylama_pylint = "*"
+pylama-pylint = "*"
 pytest = "*"
 pytest-cov = "*"
 
 
 [packages]
 
-Flask = "*"
+flask = "*"
 marshmallow = "*"
+pifacedigitalio = "*"
+pifacecommon = ">=3.0.0"
 
 
 [requires]
