--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: python
 python:
   - "3.6"
 
+before_install: pip install pipenv
+
 install:
-  - pip install pipenv
   - pipenv install --dev
   - pip install coveralls
   - pip install -e .
