Add deployment from travis to resin.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,9 @@ install:
 script: pipenv run pytest
 
 after_success: coveralls
+
+deploy:
+  provider: script
+  script: ./resin-deploy.sh
+  on:
+    tags: true
