--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,3 @@
-direnv_load pipenv run direnv dump
-watch_file Pipfile
-watch_file Pipfile.lock
+export VIRTUAL_ENV=$(pipenv --venv)
+PATH_add "$VIRTUAL_ENV/bin"
+export PIPENV_ACTIVE=1
