Move all plugins and utils configuration in setup.cfg

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pipenv install --dev
   - pip install coveralls
 
-script: pipenv run pytest
+script: pipenv run pytest --verbose
 
 after_success: coveralls
 
