--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,7 @@
-[run]
+[coverage:run]
 branch = True
 
-[report]
-# Regexes for lines to exclude from consideration
+[coverage:report]
 exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
@@ -19,4 +18,17 @@ exclude_lines =
     if 0:
     if __name__ == .__main__.:
 
-ignore_errors = True
+[tool:pytest]
+addopts =
+  --cache-clear
+  --pylama
+  --cov=pilotwire_controller
+  --cov-report=term
+  --cov-report=html
+
+[pylama]
+linters = mccabe,pycodestyle,pyflakes,pylint
+ignore = C,I
+
+[pylama:tests/*.py]
+ignore = R0201,W0212,W0621
