--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ exclude_lines =
 [tool:pytest]
 addopts =
   --cache-clear
+  --isort
   --pylama
   --cov=pilotwire_controller
   --cov-report=term
