--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,7 +5,14 @@ WORKDIR /usr/src/app
 
 COPY Pipfile Pipfile.lock ./
 
-ENV PIPENV_VERSION 9.0.1
+ENV PYTHONFAULTHANDLER=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_DEFAULT_TIMEOUT=60 \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_NO_CACHE_DIR=off \
+    PIPENV_COLORBLIND=1 \
+    PIPENV_NOSPIN=1 \
+    PIPENV_VERSION=9.0.1
 
 RUN set -ex \
     && pip install --upgrade "pipenv==${PIPENV_VERSION}" \
