--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,27 +3,30 @@ FROM resin/%%RESIN_MACHINE_NAME%%-alpine-python:3.6
 
 WORKDIR /usr/src/app
 
-COPY Pipfile Pipfile.lock ./
-
 ENV PYTHONFAULTHANDLER=1 \
     PYTHONUNBUFFERED=1 \
     PIP_DEFAULT_TIMEOUT=60 \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
     PIP_NO_CACHE_DIR=off \
     PIPENV_COLORBLIND=1 \
-    PIPENV_NOSPIN=1 \
-    PIPENV_VERSION=9.0.1
+    PIPENV_NOSPIN=1
 
+ENV PIPENV_VERSION=9.0.1
+COPY Pipfile Pipfile.lock ./
 RUN set -ex \
     && pip install --upgrade "pipenv==${PIPENV_VERSION}" \
     && pipenv install --deploy --system
 
-COPY pilotwire_controller ./pilotwire_controller
+ENV PIFACECOMMON_REF=ff3cd937b7da2e8b60ebde65457c089427661812 \
+    PIFACEDIGITALIO_REF=d231a82bdb55d5f57f44ba7aec00bfd6c0b9a9d4
+RUN pip install \
+    "git+https://github.com/piface/pifacecommon@${PIFACECOMMON_REF}#egg=pifacecommon" \
+    "git+https://github.com/piface/pifacedigitalio@${PIFACEDIGITALIO_REF}#egg=pifacedigitalio"
 
+COPY pilotwire_controller ./pilotwire_controller
 RUN python -m compileall pilotwire_controller
 
 ENV INITSYSTEM on
 
 ENV FLASK_APP pilotwire_controller/api.py
-
 CMD [ "flask", "run", "--host", "0.0.0.0", "--port", "80" ]
