Use new pipenv layout from direnv's stdlib

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,2 @@
-export VIRTUAL_ENV=$(pipenv --venv)
-PATH_add "$VIRTUAL_ENV/bin"
-export PIPENV_ACTIVE=1
+export PIPENV_VENV_IN_PROJECT=1
+layout pipenv
