--- a/setup.cfg
+++ b/setup.cfg
@@ -22,14 +22,9 @@ exclude_lines =
 addopts =
   --cache-clear
   --isort
-  --pylama
   --cov=pilotwire_controller
   --cov-report=term
   --cov-report=html
 
-[pylama]
-linters = mccabe,pycodestyle,pyflakes,pylint
-ignore = C,I
-
-[pylama:tests/*.py]
-ignore = R0201,W0212,W0621
+[isort]
+lines_after_imports = 2
