Configure code quality helpers.

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,13 +18,25 @@ exclude_lines =
     if 0:
     if __name__ == .__main__.:
 
-[tool:pytest]
-addopts =
-  --cache-clear
-  --isort
-  --cov=pilotwire_controller
-  --cov-report=term
-  --cov-report=html
+[flake8]
+max-line-length = 80
+select = C,E,F,W,B,B901,N
+ignore = E501
 
 [isort]
 lines_after_imports = 2
+
+# Pylint
+[MESSAGES CONTROL]
+disable=C,R
+
+[tool:pytest]
+addopts =
+  --cache-clear
+  --cov=pilotwire_controller
+  --cov-report=term
+  --cov-report=html
+  --flake8
+  --isort
+  --pylint
+  --pylint-rcfile=setup.cfg
