--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,17 @@ name = "pypi"
 rpyc = "*"
 
 [dev-packages]
+black = {version="*", markers="python_version >= '3.6'"}
+"flake8" = "*"
+"flake8-bugbear" = "*"
+"flake8-comprehensions" = "*"
+"pep8-naming" = "*"
+pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+"pytest-flake8" = "*"
 pytest-isort = "*"
-black = {version="*", markers="python_version >= '3.6'"}
+pytest-pylint = "*"
 
 [requires]
 python_version = "3.6"
