--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,11 @@ select = C,E,F,W,B,B901,N
 ignore = E501
 
 [isort]
-lines_after_imports = 2
+combine_as_imports=True
+include_trailing_comma=True
+line_length=88
+lines_after_imports=2
+multi_line_output=3
 
 # Pylint
 [MESSAGES CONTROL]
