--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 rpyc = "*"
+fire = "*"
 
 [dev-packages]
 black = {version="*", markers="python_version >= '3.6'"}
@@ -18,6 +19,7 @@ pytest-cov = "*"
 "pytest-flake8" = "*"
 pytest-isort = "*"
 pytest-pylint = "*"
+pytest-mock = "*"
 
 [requires]
 python_version = "3.6"
