Use a cached property for PiFaceController.
This avoids to instantiate PiFaceDigital on each connection to the
service.

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 rpyc = "*"
 fire = "*"
+cached-property = "*"
 
 [dev-packages]
 black = {version="*", markers="python_version >= '3.6'"}
