--- a/Pipfile
+++ b/Pipfile
@@ -9,15 +9,15 @@ fire = "*"
 cached-property = "*"
 
 [dev-packages]
-black = {version="*", markers="python_version >= '3.6'"}
-"flake8" = "*"
-"flake8-bugbear" = "*"
-"flake8-comprehensions" = "*"
-"pep8-naming" = "*"
+black = "*"
+flake8 = "*"
+flake8-bugbear = "*"
+flake8-comprehensions = "*"
+pep8-naming = "*"
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
-"pytest-flake8" = "*"
+pytest-flake8 = "*"
 pytest-isort = "*"
 pytest-pylint = "*"
 pytest-mock = "*"
