--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
 before_install: pip install pipenv
 
 install:
-  - pipenv install --dev
+  - pipenv install --dev --verbose
   - pip install coveralls
 
 script: pipenv run pytest --verbose
