--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-flake8 = "^1.0"
 pytest-isort = "^0.2.1"
 pytest-pylint = "^0.13.0"
 pytest-mock = "^1.10"
+pytest-black = "^0.3.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
