--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,21 @@ branches:
     # Build is already triggered by PR
     - /^dependabot\/.*$/
 
-install:
+before_install:
   - pip install --upgrade pip
   - >
     curl -sSL -o /tmp/get-poetry.py
     https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py
   - python /tmp/get-poetry.py -y
   - source $HOME/.poetry/env
-  - poetry install
-  - pip install coveralls
 
-script: poetry run pytest --verbose
+install:
+  - poetry install
+  - pip install coveralls pre-commit
+
+script:
+  - pre-commit run --all-files
+  - poetry run pytest --verbose
 
 after_success: coveralls
 
