--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,8 @@ pep8-naming = "^0.7.0"
 pylint = "^2.2"
 pytest = "^4.0"
 pytest-cov = "^2.6"
-pytest-flake8 = "^1.0"
-pytest-isort = "^0.2.1"
-pytest-pylint = "^0.13.0"
 pytest-mock = "^1.10"
-pytest-black = "^0.3.2"
+isort = "^4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
