Only do terminal and HTML coverage report in development environment

--- a/.envrc
+++ b/.envrc
@@ -7,3 +7,5 @@ fi
 export VIRTUAL_ENV
 export POETRY_ACTIVE=1
 PATH_add "$VIRTUAL_ENV/bin"
+
+export PYTEST_ADDOPTS="--cache-clear --cov-report=term --cov-report=html"
