--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,2 @@
 [pytest]
-addopts =
-  --cache-clear
-  --cov=pilotwire_controller
-  --cov-report=term
-  --cov-report=html
+addopts = --cov=pilotwire_controller
