--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.7"
 rpyc = "^4.0"
 fire = "^0.1.3"
 cached-property = "^1.5"
+pifaceio = "^1.26"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
